--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Geoffrey Bosch</a>
-      <nav class="navbar">
+      <div class="row">
+      <a href="index.html" id="logo" class="col-xs-12 col-sm-12 col-md-5 col-lg-4">Geoffrey Bosch</a>
+      <nav class="navbar col-xs-12 col-sm-12 col-md-7 col-lg-8">
         <div>
           <ul class="navbar-nav" style="flex-direction: row">
             <li class="nav-item"><a href="index.html">About</a></li>
@@ -23,15 +24,16 @@
           </ul>
         </div>  
       </nav>
+      </div>
     </div>
   </header>
-
+  
   <div id="main-container" class="container">
     <section class="main-section row" >
       <div class="col">
         <h1>About Me</h1>
 
-        <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+        <img src="assets/images/cat.jpg" class="auth-image col-sm-12 col-md-6 col-lg-4" alt="Your Name">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
