--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,26 @@
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+      <div class="row">
+      <a href="index.html" id="logo" class="col-xs-12 col-sm-12 col-md-5 col-lg-4">Geoffrey Bosch</a>
+      <nav class="navbar col-xs-12 col-sm-12 col-md-7 col-lg-8">
+        <div>
+          <ul class="navbar-nav" style="flex-direction: row">
+            <li class="nav-item"><a href="index.html">About</a></li>
+            <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+            
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>  
       </nav>
+      </div>
     </div>
   </header>
 
@@ -59,6 +67,9 @@
       Copyright &copy;
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
